--- a/igor/igor_app/templates/about.html
+++ b/igor/igor_app/templates/about.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="jumbotron text-center">
             <h1>About Igor</h1>
-            <p id="header"><a href="/logout">Log Out</a> | <a href="/">My Page</a> | <a href="questions">Help Wanted</a></p>   
+            <p id="header"><a href="/logout">Log Out</a> | <a href="/">My Page</a> | <a href="/igor/questions">Help Wanted</a></p>   
         </div>
         <div class='col-lg-11'>
             <h2> Igor is a simple question ad answer application for the average person.</h2>
