--- a/igor/igor_app/templates/results.html
+++ b/igor/igor_app/templates/results.html
@@ -18,17 +18,17 @@
             <h1>Igor: Q & A</h1>
             <p class="header"><a href="/logout">Log Out</a> | <a href="/igor/about">About Igor</a> | <a href="/igor/questions">Help Wanted</a> | <a href="/">My Page</a></p>
         </div>
-        <div class="col-lg-11">
-            <div class="col-lg-6">
-                <h4> Question Asked By : {{selected_question.user_who_posted.username}}</h4>
-                <h3 id="question">{{selected_question.content}}</h3>
+        <div class="col-lg-11 col-lg-offset-2">
+            <div class="col-lg-6 col-lg-offset-1">
+                <h3> Question Asked By : {{selected_question.user_who_posted.profile.first_name}}-{{selected_question.user_who_posted.profile.occupation}} <img src="{{selected_question.user_who_posted.profile.img.url}}" id="avatar"/></h3>
+                <h2 id="question">{{selected_question.content}}</h2>
          
             </div>
-            <div class="col-lg-6">
-                <h3>Answers:</h3>
-                    {% for answer in selected_question.answers.all %}
-                        <p>{{answer.user_who_answered.profile.first_name}} - {{answer.user_who_answered.profile.occupation}} <img src='{{ answer.user_who_answered.profile.img.url }}' id="avatar"></p><h4 id="answer"> {{answer.content}} </h4>
-                    {% endfor %}
+            <div class="col-lg-6 col-lg-offset-1">
+                {% for answer in selected_question.answers.all %}
+                    <h3>Answered By: {{answer.user_who_answered.profile.first_name}} - {{answer.user_who_answered.profile.occupation}} <img src='{{ answer.user_who_answered.profile.img.url }}' id="avatar"></h3>
+                    <h4 id="answer"> {{answer.content}} </h4>
+                {% endfor %}
                 
             </div>
                
