--- a/igor/igor_app/templates/registration.html
+++ b/igor/igor_app/templates/registration.html
@@ -20,11 +20,12 @@
         </div>
         <div class="col-lg-11">
             <form action="/igor/create/" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{profile_form.as_p}}
-            <input type="submit" value="Complete Profile">
+                {% csrf_token %}
+                {{profile_form.as_p}}
+                <input type="submit" id="submit" value="Complete Profile">
             </form>
         </div>
+       
     </div>
 </body>
 </html>
